# 2025_kmu_virtual_competition

./: .gitignore  2d_cam_cali.py  README.md  cali_clustering_tf.py  lane_main.py  obstacle_extractor.cpp  parameter_tuner.py  road_segmentation.py
Advanced-lane-finding-master/: bev.py  cali.py  finding_lines.py  main.py  threshold.py
clo_ws/src/: test.py
clo_ws/src/dynamic_obs/: CMakeLists.txt  package.xml
clo_ws/src/lane_detection/: CMakeLists.txt  package.xml
clo_ws/src/map/: kmu_map.pgm  kmu_map.yaml
clo_ws/src/obstacle_detector/: network.json  sensor.json
clo_ws/src/odom_gps_simulator/: CMakeLists.txt  package.xml
clo_ws/src/path_planning/: CMakeLists.txt  package.xml
map/: kmu_map.yaml
obstacle_detector/: CMakeLists.txt  frames.gv
obstacle_detector/launch/: nodes.launch
obstacle_detector/src/: obstacle_extractor.cpp  obstacle_extractor_backup.cpp
odom_gps_simulator/: CMakeLists.txt  package.xml
odom_gps_simulator/launch/: odom_gps.launch
odom_gps_simulator/src/: odom_publisher.cpp
path_planning/: CMakeLists.txt
path_planning/include/: local_path.h
path_planning/launch/: path_planning.launch
path_planning/path/: kmu_out_path.txt
path_planning/src/: butterworth.cpp  global_path.py  path_maker.py
robot_setup_tf/: CMakeLists.txt  package.xml
robot_setup_tf/launch/: tf.launch
robot_setup_tf/src/: scan_transformer_node.cpp  static_tf2_broadcaster.cpp  tf_listener.cpp
webot_ws/src/roundAboutNav/: CMakeLists.txt  package.xml
webot_ws/src/roundAboutNav/src/: RoundAboutNav.cpp  arrow_cluster_center.cpp
(+108 files in other folders)
